--- a/authuser/templates/dashboard/dashboard.html
+++ b/authuser/templates/dashboard/dashboard.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Dashboard {% endblock %}</title>
     <link rel="stylesheet" href="{% sass_src 'css/style.scss' %}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
     <div class="dashboard_container">
