--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -206,15 +206,17 @@ body {
   color: #000000;
 }
 .adminaside_container .admin_profile {
-  margin-top: 4.8em;
+  position: fixed;
+  bottom: 2%;
+  left: center;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 .adminaside_container .admin_profile .image img {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border: 1px solid #F8F4F9;
   border-radius: 50%;
 }
@@ -225,11 +227,15 @@ body {
   color: #F8F4F9;
   font-size: 1em;
 }
-.adminaside_container .admin_profile form .logout {
-  padding: 0.5em 2.8em;
+.adminaside_container .admin_profile form button {
+  border: none;
+  border-radius: 4px;
+  margin: 0.8em 0;
+  padding: 0.6em 2.8em;
   background: #ff0000;
   font-weight: 500;
-  font-size: 1em;
+  font-size: 1.1em;
+  color: #F8F4F9;
 }
 
 .dashboard_container {
