--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -2,12 +2,10 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, sans-serif;
-}
+  font-family: 'Segoe UI', Tahoma,sans-serif; }
 
 body {
-  background: #F8F4F9;
-}
+  background: #F8F4F9; }
 
 .navbar_container {
   display: flex;
@@ -16,134 +14,191 @@ body {
   justify-content: space-between;
   padding: 0 0.9em;
   box-shadow: 2px 2px 3px #000000;
-  -webkit-backdrop-filter: blur(4px);
-          backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
   height: 10vh;
   position: sticky;
   left: 0;
   top: 0;
-  z-index: 100;
-}
-.navbar_container .nav_logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5em;
-}
-.navbar_container .nav_logo .image img {
-  border-radius: 50%;
-}
-.navbar_container .nav_logo a {
-  text-decoration: none;
-  color: #F8F4F9;
-  font-size: 1.1em;
-  font-weight: bold;
-  font-size: 1.3em;
-  color: #000000;
-}
-.navbar_container .nav_logo a.active {
-  color: #d2691e;
-}
-.navbar_container .nav_links ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  padding: 0 0.3em;
-  list-style: none;
-}
-.navbar_container .nav_links ul li {
-  padding: 0 0.6em;
-}
-.navbar_container .nav_links ul li a {
-  text-decoration: none;
-  color: #F8F4F9;
-  font-size: 1.1em;
-  font-weight: 550;
-  color: #000000;
-}
-.navbar_container .nav_links ul li.active a {
-  color: #d2691e;
-}
-.navbar_container .nav_links ul .logout {
-  padding: 0.5em 1.2em;
-  background: #ff0000;
-  margin: unset;
-  border-radius: 4px;
-  border: none;
-}
-.navbar_container .nav_links ul .logout a {
-  color: #F8F4F9;
-  font-size: 1.1em;
-}
-.navbar_container .nav_links ul .login {
-  background: #000000;
-  padding: 0.5em 1.5em;
-  border-radius: 12px;
-  border: none;
-}
-.navbar_container .nav_links ul .login a {
-  color: #F8F4F9;
-}
-.navbar_container .burger {
-  display: none;
-  cursor: pointer;
-}
-.navbar_container .burger span {
-  height: 3px;
-  width: 30px;
-  display: block;
-  margin: 0.5em 0;
-  background-color: #000000;
-  color: #000000;
-}
-
-@media screen and (max-width: 726px) {
-  .navbar_container .nav_links {
-    display: none;
-  }
-  .navbar_container .nav_links ul {
-    display: none;
-    width: 50%;
-    height: 60vh;
-    background: #000000;
-    position: absolute;
-    flex-direction: column;
-    align-items: flex-end;
-    padding: 0.5em 1em;
-    gap: 1.5em 0;
-    top: 11vh;
-    right: 0.1em;
-  }
-  .navbar_container .nav_links ul li {
-    width: 80%;
-    margin: auto;
-  }
-  .navbar_container .nav_links ul .profiles {
+  z-index: 100; }
+  .navbar_container .nav_logo {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-  }
-  .navbar_container .show {
-    display: block !important;
-  }
-  .navbar_container .show ul {
+    gap: 0.5em; }
+    .navbar_container .nav_logo .image img {
+      border-radius: 50%; }
+    .navbar_container .nav_logo a {
+      text-decoration: none;
+      color: #F8F4F9;
+      font-size: 1.1em;
+      font-weight: bold;
+      font-size: 1.3em;
+      color: #000000; }
+      .navbar_container .nav_logo a.active {
+        color: #d2691e; }
+  .navbar_container .nav_links ul {
     display: flex;
-  }
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 0 0.3em;
+    list-style: none; }
+    .navbar_container .nav_links ul li {
+      padding: 0 0.6em; }
+      .navbar_container .nav_links ul li a {
+        text-decoration: none;
+        color: #F8F4F9;
+        font-size: 1.1em;
+        font-weight: 550;
+        color: #000000; }
+      .navbar_container .nav_links ul li.active a {
+        color: #d2691e; }
+    .navbar_container .nav_links ul .logout {
+      padding: 0.5em 1.2em;
+      background: #ff0000;
+      margin: unset;
+      border-radius: 4px;
+      border: none; }
+      .navbar_container .nav_links ul .logout a {
+        color: #F8F4F9;
+        font-size: 1.1em; }
+    .navbar_container .nav_links ul .login {
+      background: #000000;
+      padding: 0.5em  1.5em;
+      border-radius: 12px;
+      border: none; }
+      .navbar_container .nav_links ul .login a {
+        color: #F8F4F9; }
   .navbar_container .burger {
-    display: block;
-  }
+    display: none;
+    cursor: pointer; }
+    .navbar_container .burger span {
+      height: 3px;
+      width: 30px;
+      display: block;
+      margin: 0.5em 0;
+      background-color: #000000;
+      color: #000000; }
+
+@media screen and (max-width: 726px) {
+  .navbar_container .nav_links {
+    display: none; }
+    .navbar_container .nav_links ul {
+      display: none;
+      width: 50%;
+      height: 60vh;
+      background: #000000;
+      position: absolute;
+      flex-direction: column;
+      align-items: flex-end;
+      padding: 0.5em 1em;
+      gap: 1.5em 0;
+      top: 11vh;
+      right: 0.1em; }
+      .navbar_container .nav_links ul li {
+        width: 80%;
+        margin: auto; }
+      .navbar_container .nav_links ul .profiles {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column; }
+  .navbar_container .show {
+    display: block !important; }
+    .navbar_container .show ul {
+      display: flex; }
+  .navbar_container .burger {
+    display: block; }
   .navbar_container .active_burger span {
-    transition: transform 0.3s ease, opacity 0.3s ease;
-  }
-  .navbar_container .active_burger span:nth-child(1) {
-    transform: rotate(-45deg) translate(-7px, 8px);
-  }
-  .navbar_container .active_burger span:nth-child(2) {
-    opacity: 0;
-  }
-  .navbar_container .active_burger span:nth-child(3) {
-    transform: rotate(45deg) translate(-7px, -8px);
-  }
-}/*# sourceMappingURL=style.css.map */
+    transition: transform 0.3s ease, opacity 0.3s ease; }
+    .navbar_container .active_burger span:nth-child(1) {
+      transform: rotate(-45deg) translate(-7px, 8px); }
+    .navbar_container .active_burger span:nth-child(2) {
+      opacity: 0; }
+    .navbar_container .active_burger span:nth-child(3) {
+      transform: rotate(45deg) translate(-7px, -8px); } }
+
+.adminaside_container {
+  background: #000000;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  left: 0;
+  padding: 0.5em;
+  width: 15%;
+  border-right: 2px solid #d2691e; }
+  .adminaside_container .admin_logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em; }
+    .adminaside_container .admin_logo img {
+      border-radius: 50%; }
+    .adminaside_container .admin_logo a {
+      text-decoration: none;
+      color: #F8F4F9;
+      font-size: 1.1em;
+      color: #F8F4F9;
+      font-weight: bold;
+      text-decoration: underline;
+      font-size: 0.9em; }
+  .adminaside_container .asidenav_link {
+    padding: 0.5em 0; }
+    .adminaside_container .asidenav_link ul {
+      list-style: none; }
+      .adminaside_container .asidenav_link ul li {
+        padding: 0.2em 0;
+        border-bottom: 1px solid #F8F4F9;
+        margin-bottom: 0.2em; }
+        .adminaside_container .asidenav_link ul li a {
+          text-decoration: none;
+          color: #F8F4F9;
+          font-size: 1.1em;
+          color: #F8F4F9;
+          font-weight: 550; }
+          .adminaside_container .asidenav_link ul li a i {
+            padding: 0 0.2em;
+            font-size: 0.9em; }
+        .adminaside_container .asidenav_link ul li.active {
+          background: #F8F4F9;
+          border-radius: 8px;
+          padding: 0.2em; }
+          .adminaside_container .asidenav_link ul li.active a {
+            color: #000000; }
+  .adminaside_container .admin_profile {
+    position: fixed;
+    bottom: 2%;
+    left: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .adminaside_container .admin_profile .image img {
+      width: 50px;
+      height: 50px;
+      border: 1px solid #F8F4F9;
+      border-radius: 50%; }
+    .adminaside_container .admin_profile .admin_username a {
+      text-decoration: none;
+      color: #F8F4F9;
+      font-size: 1.1em;
+      color: #F8F4F9;
+      font-size: 1em; }
+    .adminaside_container .admin_profile form button {
+      border: none;
+      border-radius: 4px;
+      margin: 0.8em 0;
+      padding: 0.6em 2.8em;
+      background: #ff0000;
+      font-weight: 500;
+      font-size: 1.1em;
+      color: #F8F4F9; }
+
+.dashboard_container {
+  display: flex; }
+  .dashboard_container .dashboard_content {
+    width: calc(100% - $asidenav-width);
+    margin-left: 2%;
+    padding: 0.5em 0; }
+
+/*# sourceMappingURL=style.css.map */
