Added the design for the home,about,service pages

--- a/core/static/css/style.scss
+++ b/core/static/css/style.scss
@@ -9,7 +9,12 @@
 @import 'navbar';
 @import 'asidenavbar';
 @import 'dashboard';
+@import 'footer';
 
 
 
 //main styles
+@import 'hero';
+@import 'home';
+@import 'about';
+@import 'service';
