--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,9 +1,74 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %} {{ school_name }} {% endblock  %}
 
 {% block content %}
+    <div class="home_container">
+        <div class="hero_container">
+            <div class="hero_content">
+                <h1>Welcome to <span>{{ school_name }}</span></h1>
+                <h2>Nurturing Bright Futures, One Child at a Time</h2>
+                <p>A Safe, Loving, and Educational Environment for Your Little One</p>
+    
+                <div class="cta-buttons">
+                    <a href="#">Enroll Today</a>
+                    <a href="#">Inquries</a>
+                </div>
+            </div>
+        </div>
 
-    <h1>Welcome to {{ school_name }}</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo optio beatae illo quos amet architecto, fuga, maxime officia eos iure soluta ex eaque placeat laboriosam. Adipisci saepe fugiat praesentium ea, omnis amet sequi culpa aspernatur nostrum assumenda cupiditate distinctio vitae veritatis sapiente nisi quaerat deleniti voluptate. Omnis excepturi sequi ut provident vero, itaque accusantium. Modi ratione sequi eligendi incidunt nesciunt excepturi illo quam aspernatur id rem iste vero, esse voluptatibus quis alias vitae delectus, quisquam saepe ut aut corrupti consequuntur nemo laborum dignissimos? Adipisci, voluptatibus. Fugit dicta quia molestiae assumenda aliquid doloremque esse tempore cum? Error mollitia velit sapiente perspiciatis maiores laboriosam, quae odio ex, dolore, nostrum enim! Quam adipisci delectus at! Deleniti atque inventore a vero soluta modi nesciunt facilis asperiores alias quo adipisci amet consequatur dolorem perspiciatis recusandae, dolor, consectetur non aperiam voluptates quis nihil dicta. Tenetur quidem hic ea distinctio ratione perspiciatis, omnis, sed quisquam quis amet quo, quasi laudantium velit. Soluta quia magni, aliquam corporis eos illo tenetur fuga incidunt, doloribus distinctio eligendi numquam neque asperiores deserunt eveniet, qui vero laboriosam. Beatae vero, porro assumenda perspiciatis veniam, sunt, pariatur suscipit cum corporis ea iste reiciendis alias totam adipisci illum illo atque necessitatibus. A nesciunt maiores nulla!</p>
+        <div class="home_infor main_container">
+            <h1>Why Choose Us {{ school_name }}?</h1>
+            <div class="choose_content">
+                <div class="infor1">
+                    <p>At Twinkle Daycare, we prioritize your child’s growth and happiness. Our caring, experienced staff
+                        creates a nurturing environment where children can explore, learn, and thrive every day.
+                    </p>
+                </div>
+
+                <div class="infor1">
+                    <p>We offer interactive learning through play, ensuring children develop essential skills while having fun.
+                        With secure facilities, healthy meals, and flexible schedules, we provide a safe, enriching experience
+                        for every child.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="home_facilities main_container">
+            <h2>Our School facilities</h2>
+            
+            <p>Twinkle Daycare provides vibrant, child-friendly classrooms, secure outdoor play areas,
+                and interactive learning spaces. Our facilities are designed to ensure safety,
+                encourage creativity, and support every child's development and growth.
+            </p>
+
+            <div class="facilities_content">
+                <div class="facilities">
+                    <div class="img">
+                        <img src="{% static 'images/playground.jpg' %}" alt="{{ school_name }}" >
+                    </div>
+                    <h4>Our Playgroud</h4>
+                </div>
+
+                <div class="facilities">
+                    <div class="img">
+                        <img src="{% static 'images/equipment.jpg' %}" alt="{{ school_name }}" >
+                    </div>
+                    <h4>Playthings for children</h4>
+                </div>
+
+                <div class="facilities">
+                    <div class="img">
+                        <img src="{% static 'images/class.jpg' %}" alt="{{ school_name }}" >
+                    </div>
+                    <h4>Our classes</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 {% endblock  %}
