--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,13 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} {{ school_name }} {% endblock %}</title>
-    <link rel="stylesheet" href="{% sass_src 'css/style.css' %}">
+    <link rel="stylesheet" href="{% sass_src 'css/style.scss' %}">
 </head>
 <body>
     {% include 'partials/navbar.html' %}
 
     {% block content %}
         
-    {% endblock %}    
+    {% endblock %}   
+    {% include 'partials/footer.html' %} 
 </body>
 </html>
