--- a/staticfiles/css/style.scss
+++ b/staticfiles/css/style.scss
@@ -3,7 +3,17 @@
 @import 'mixin';
 @import 'global';
 
+
+
 //partial styles
 @import 'navbar';
+@import 'asidenavbar';
+@import 'dashboard';
+@import 'footer';
+
+
 
 //main styles
+@import 'hero';
+@import 'home';
+@import 'about';
