--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -12,8 +12,8 @@
                 <p>A Safe, Loving, and Educational Environment for Your Little One</p>
     
                 <div class="cta-buttons">
-                    <a href="#">Enroll Today</a>
-                    <a href="#">Inquries</a>
+                    <a href="{% url 'service_page' %}">Enroll Today</a>
+                    <a href="{% url 'contact_page' %}">Inquries</a>
                 </div>
             </div>
         </div>
@@ -68,7 +68,4 @@
             </div>
         </div>
     </div>
-
-
-
 {% endblock  %}
