--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -502,4 +502,119 @@ body {
 }
 .service_container .thanks h3 {
   padding: 0.5em 0;
+}
+
+.contact_container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5em;
+}
+@media screen and (min-width: 726px) {
+  .contact_container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.contact_container .contact_infor {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  align-items: unset;
+  justify-content: left;
+}
+.contact_container .contact_infor p {
+  padding: 0.5em 0;
+}
+.contact_container .contact_infor p a {
+  text-decoration: none;
+  color: #F8F4F9;
+  font-size: 1.1em;
+  text-decoration: underline;
+  color: #000000;
+  font-size: 1.5em;
+}
+.contact_container .contact_form .input_group .names {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
+}
+.contact_container .contact_form .input_group .input_content {
+  position: relative;
+  padding: 0.6em 0;
+}
+.contact_container .contact_form .input_group .input_content label {
+  position: absolute;
+  top: 20px;
+  left: 10px;
+  transition: top 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  pointer-events: none;
+  color: #F8F4F9;
+  font-weight: 550;
+}
+.contact_container .contact_form .input_group .input_content label i {
+  padding: 0 0.3em;
+}
+.contact_container .contact_form .input_group input[type=text],
+.contact_container .contact_form .input_group input[type=email],
+.contact_container .contact_form .input_group textarea {
+  width: 100%;
+  padding: 0.9em 1em;
+  color: #000000;
+  background: #F8F4F9;
+  border-radius: 5px;
+  transition: all 0.3s ease-in-out;
+  border: 1px solid grey;
+}
+.contact_container .contact_form .input_group input:focus ~ label,
+.contact_container .contact_form .input_group input:valid ~ label,
+.contact_container .contact_form .input_group textarea:focus ~ label,
+.contact_container .contact_form .input_group textarea:valid ~ label {
+  top: -3px;
+  opacity: 1;
+  background: #000000;
+  color: #F8F4F9;
+  font-size: 0.85em;
+  font-weight: 600;
+  padding: 0.2em;
+  border-radius: 2px;
+}
+.contact_container .comment_items {
+  padding: 0.9em 0;
+}
+.contact_container .comment_items h3 {
+  text-decoration: underline;
+  padding-bottom: 0.3em;
+}
+.contact_container .comment_items p {
+  padding: 0.3em 0;
+  font-size: 1.1em;
+}
+.contact_container .comment_items p span {
+  font-weight: 550;
+  font-size: 1.2em;
+}
+.contact_container .comment_items button {
+  padding: 0.8em 1.5em;
+  margin: 0.9em 0;
+  background: #d2691e;
+  border: none;
+  border-radius: 8px;
+}
+.contact_container .comment_items button a {
+  text-decoration: none;
+  color: #F8F4F9;
+  font-size: 1.1em;
+  font-weight: 550;
+}
+
+@media screen and (min-width: 726px) {
+  .contact_container {
+    padding: 0 5%;
+  }
+  .contact_container .contact_infor p {
+    font-size: 1.2em;
+  }
+  .contact_container .contact_form .input_group .names {
+    display: unset;
+  }
 }/*# sourceMappingURL=style.css.map */
