--- a/core/templates/partials/footer.html
+++ b/core/templates/partials/footer.html
@@ -16,9 +16,10 @@
 
         <div class="footer_links">
             <h3>Links</h3>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'about_page' %}">About Us</a></li>
+            <li><a href="{% url 'service_page' %}">Our Services</a></li>
+            <li><a href="{% url 'contact_page' %}">Contact Us</a></li>
         </div>
 
        <div class="footer_contact">
