--- a/authuser/templates/dashboard/asidenavbar.html
+++ b/authuser/templates/dashboard/asidenavbar.html
@@ -18,7 +18,14 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a href="{% url 'parents' %}">
+                        <i class="fas fa-user-plus"></i>
+                        <span>Parent</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="{% url 'enroll' %}">
                         <i class="fas fa-user-plus"></i>
                         <span>Enrollment</span>
                     </a>
