Add the logic to enroll childern on the teachers dashboard

--- a/core/static/css/_global.scss
+++ b/core/static/css/_global.scss
@@ -40,17 +40,23 @@ body{
             background-color: $warning-color;
             color: $warning-color;
         }
-
-        // &.info {
-        //     background-color: $info-bg;
-        //     color: $info-text;
-        //     border-color: $info-border;
-        // }
     }
 }
 
 .text_danger{
     color: $danger-color;
+}
+
+.text_success{
+    color: $success-color;
+}
+
+.text_warning{
+    color: $warning-color;
+}
+
+.default {
+    color: gray;
 }
 
 .btn_danger{
