--- a/staticfiles/css/_user.scss
+++ b/staticfiles/css/_user.scss
@@ -40,7 +40,7 @@
             .action{
                 @include grid(2);
 
-                .fa-trash-alt{
+                .fa-trash{
                     color:$danger-color;
                 }
                 
