--- a/teachers/templates/parents/add_parent.html
+++ b/teachers/templates/parents/add_parent.html
@@ -11,22 +11,22 @@
             {% csrf_token %}
 
             <div class="input_group">
-                <label for="first_name">First Name</label><span>*</span>
+                <label for="first_name">First Name</label>
                 <input type="text" name="first_name" id="first_name" placeholder="john"  required>        
             </div>
 
             <div class="input_group">
-                <label for="last_name">Last Name</label> <span>*</span>
+                <label for="last_name">Last Name</label> 
                 <input type="text" name="last_name" id="last_name" placeholder="Mwangi" required>
             </div>
 
             <div class="input_group">
-                <label for="email">Email</label><span>*</span>
+                <label for="email">Email</label>
                 <input type="email" name="email" id="email" placeholder="user@gmail.com" required>
             </div>
 
             <div class="input_group">
-                <label for="phone_number">Phone Number</label><span>*</span>
+                <label for="phone_number">Phone Number</label>
                 <input type="number" name="phone_number" id="phone_number" placeholder="0712345678" required>
             </div>
 
